Kellék eljárások írása

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Elso_python_projekt</name>
+	<name>Python_gyakorlas</name>
 	<comment></comment>
 	<projects>
 	</projects>
